--- a/.github/workflows/push-docker-to-gcp.yml
+++ b/.github/workflows/push-docker-to-gcp.yml
@@ -1,1 +1,33 @@
+name: Build and Push Docker Image to GCP Artifact Registry
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check out repository
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Set up GCP credentials
+      uses: google-github-actions/setup-gcloud@v3
+      with:
+        keyfile: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+    - name: Log in to GCP Artifact Registry
+      run: gcloud auth configure-docker ${{ secrets.base-image-451513 }}.pkg.dev
+
+    - name: Build Docker Image
+      run: |
+        docker build -t ${{ secrets.base-image-451513 }}.pkg.dev/my-docker-repository/base-image:latest .
+
+    - name: Push Docker Image to GCP Artifact Registry
+      run: |
+        docker push ${{ secrets.base-image-451513 }}.pkg.dev/my-docker-repository/base-image:latest
