--- a/.github/workflows/push-docker-to-gcp.yml
+++ b/.github/workflows/push-docker-to-gcp.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t gcr.io/${{ secrets.base-image-451513 }}.pkg.dev/my-docker-repository/base-image:latest .
+        docker build -t gcr.io/${{ secrets.base-image-451513 }}.pkg.dev/my-docker-repository/base-image:latest
 
     - name: Push Docker Image to GCP Artifact Registry
       run: |
