--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,1 +1,15 @@
 .
+# Use an official Python runtime as a parent image
+FROM python:3.9-slim
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy the current directory contents into the container at /app
+COPY . /app
+
+# Expose the desired port
+EXPOSE 8080
+
+# Run the application (adjust this command based on your app)
+CMD ["python", "app.py"]
