--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t us-east1-docker.pkg.dev/base-image-451513/my-docker-repository/python/python-image:1.0 .
+        docker build -t us-east1-docker.pkg.dev/base-image-451513/my-docker-repository/python/python-image:1.0 ./python
 
     - name: Push Docker Image to GCP Artifact Registry
       run: |
